--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
 
 		<developer>
 
-			<name>Satya Tiwari</name>
+			<name>SatyaTiwari</name>
 
 			<email>satya.tiwari@pwc.com</email>
 
@@ -41,7 +41,7 @@
 
 		<developer>
 
-			<name>Priya Awasthi</name>
+			<name>PriyaAwasthi</name>
 
 			<email>priya.awasthi@pwc.com</email>
 
