--- a/conf/sew.app.yml
+++ b/conf/sew.app.yml
@@ -18,10 +18,18 @@ configurations:
     testrailRunId: "1212"
     testrailPlatform: "3"
     postResultsTestrail: false
-    scp.url: "https://pwccx.smartcmobile.com/Portal/default.aspx"
+    # scp.url: "https://pwccx.smartcmobile.com/Portal/default.aspx"
+    scp.url: "https://pwc-ccb.smartcmobile.com/Portal/"
     csp.url: "https://qa.smartcmobile.net/SCM_10.0_S-CSP/"
-    userName: "scmuser"
-    password: "scmuser@2022"
+    # userName: "scmuser"
+    userName: "SCMDemoInstance"
+    # password: "scmuser@2022"
+    password: "Demo@1234"
+    salutationName : "John"
+    blankUserName : ""
+    blankPassword : ""
+    invalidUserName : "zytcllc1212"
+    invalidPassword : "Test@1234"
     utilityAccountNumber: "411000714880"
     commercialUserName: "ab-ios12"
     commercialPassword: "Demo@1234"
