--- a/src/test/resources/textprops/scp/pre_log_payment_locations.properties
+++ b/src/test/resources/textprops/scp/pre_log_payment_locations.properties
@@ -1,2 +1,3 @@
 preLoginPageTitle            = Payment Locations
-preLoginPageUrl              = https://pwccx.smartcmobile.com/Portal/PaymentLocationPreLogin.aspx
+#preLoginPageUrl              = https://pwccx.smartcmobile.com/Portal/PaymentLocationPreLogin.aspx
+preLoginPageUrl              =  https://pwc-ccb.smartcmobile.com/Portal/PaymentLocationPreLogin.aspx
