--- a/src/test/resources/textprops/scp/pre_log_ways_to_save.properties
+++ b/src/test/resources/textprops/scp/pre_log_ways_to_save.properties
@@ -1,6 +1,7 @@
 preLoginPageTitle            = Ways To Save
-preLoginPageUrl              = https://pwccx.smartcmobile.com/Portal/OuterSavingTips.aspx
+#preLoginPageUrl              = https://pwccx.smartcmobile.com/Portal/OuterSavingTips.aspx
 rebatesLbl					 = REBATES
 programsLbl					 = PROGRAMS
 savingLbl					 = SAVING TIPS
 educationalLbl				 = EDUCATIONAL TIPS
+preLoginPageUrl              = https://pwc-ccb.smartcmobile.com/Portal/OuterSavingTips.aspx
