refactoring done for notification and pre-login outages

--- a/src/test/resources/textprops/scp/pre_log_outage.properties
+++ b/src/test/resources/textprops/scp/pre_log_outage.properties
@@ -1,5 +1,5 @@
 preLoginPageTitle              = Outages
-preLoginPageUrl              = https://pwccx.smartcmobile.com/SCPOutage-API/
+preLoginPageUrl              = https://pwc-ccb.smartcmobile.com/Outage/
 loginPageTitle               = SCM :Login
 loginPageHeader              = LOGIN
 lblSearchBox                  = Search by City or ZIP code
