--- a/src/test/resources/textprops/scp/pre_log_payment.properties
+++ b/src/test/resources/textprops/scp/pre_log_payment.properties
@@ -1,8 +1,24 @@
 preLoginPageTitle            = Pay Bill
-preLoginPageUrl              = https://pwccx.smartcmobile.com/Portal/One-TimePayment.aspx
+#preLoginPageUrl              = https://pwccx.smartcmobile.com/Portal/One-TimePayment.aspx
+preLoginPageUrl              = https://pwc-ccb.smartcmobile.com/Portal/One-TimePayment.aspx
 payWithBlankCredsErrMsg		 = Please enter all the mandatory information.
 payWithInvalidsCredsErrMsg	 = The information you have entered cannot be validated. Please verify your information and re-enter.
 #payWithBlankPhoneNumber		 = Please enter a valid 10 digit Primary Contact Number.
 #payWithBlankAccountNumber	 = Please enter a valid 8 to 12 digit Account Number.
 payWithBlankPhoneNumber		 = Please enter Primary Contact Number.
 payWithBlankAccountNumber	 = Please Enter Service Account Number.
+txtErrMsgBlank						        = Please enter all mandatory details.
+lblNameOnCard                               = Please Enter Name on Card
+lblCardNumber							    = Card Number
+lblExpYear									= Year
+lblExpMonth									= Month
+lblSecurityCode								= Security code
+lblBillingAddress							= BILLING ADDRESS
+lblFirstName								= First Name
+lblLastName									= Last Name
+lblAddress									= Address
+lblCity										= City
+lblState									= State
+lblZIPCode									= ZIP code
+lblAddButton								= Add
+lblCancelButton								= Cancel 
