--- a/src/test/resources/textprops/scp/pre_log_payment_locations.properties
+++ b/src/test/resources/textprops/scp/pre_log_payment_locations.properties
@@ -1,3 +1,5 @@
 preLoginPageTitle            = Payment Locations
 #preLoginPageUrl              = https://pwccx.smartcmobile.com/Portal/PaymentLocationPreLogin.aspx
 preLoginPageUrl              =  https://pwc-ccb.smartcmobile.com/Portal/PaymentLocationPreLogin.aspx
+PostLoginPageUrl              =  https://pwc-ccb.smartcmobile.com/Portal/PaymentLocationsMap.aspx
+PageHeader                    = Payment Locations
