Updated pre-login CC Bill and pre-login Outages

--- a/src/test/resources/textprops/scp/pre_log_outage.properties
+++ b/src/test/resources/textprops/scp/pre_log_outage.properties
@@ -31,3 +31,6 @@ lblFrozen				= Frozen
 lblSnow					= Snow
 lblLight				= Light
 lblHeavy				= Heavy
+lblEmptySearch          = Please enter a valid City Name/Zip Code.
+lblInvalidSearch        = There are no current outages in this area.
+option                  = PA, USA
