For PreLogin ACH, Guest User and About My Home

--- a/src/test/resources/textprops/scp/pre_log_ways_to_save.properties
+++ b/src/test/resources/textprops/scp/pre_log_ways_to_save.properties
@@ -5,3 +5,36 @@ programsLbl					 = PROGRAMS
 savingLbl					 = SAVING TIPS
 educationalLbl				 = EDUCATIONAL TIPS
 preLoginPageUrl              = https://pwc-ccb.smartcmobile.com/Portal/OuterSavingTips.aspx
+allOption                    = All
+resOption                    = Residential
+commOption                   = Commercial
+multiOption                  = Multi-Family
+rebateTitle                  = Utility Rebate
+rebateImg                    =
+rebateDescpt                 = A public utility company is an organization that maintains the infrastructure for a public service. Public utilities are subject to forms of public control and regulation ranging from local community-based groups to statewide government monopolies.
+rebateReadMore               = Read More
+rebateViews                  = Views : 11
+rebateLike                   = Like : 0
+disclaimerWaysToSave         = To enroll for a Rebate or a Program, please Sign in or Register.
+programTitle                 = New Program 27
+programImg                   =
+programDescpt                = New Program 27
+programReadMore              = Read More
+programViews                 = Views : 4
+programLike                  = Like : 0
+rebateReadmoreImg            =
+rebateReadmoreTitle          = Utility Rebate
+rebateReadmoreDescpt         = A public utility company is an organization that maintains the infrastructure for a public service. Public utilities are subject to forms of public control and regulation ranging from local community-based groups to statewide government monopolies.
+rebateReadmoreLike           = Like : 0
+savingsTitle                 = New tips 27
+savingsImg                   =
+savingsDescpt                = New tips 27
+savingsReadMore              = Read More
+savingsViews                 = Views : 4
+savingsLike                  = Like : 0
+educationTitle               = New Tips 27
+educationImg                 =
+educationDescpt              = New Tips 27
+educationReadMore            = Read More
+educationViews               = Views : 4
+educationLike                = Like : 0
